<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.MainActivity">

    <!-- App Logo/Title -->
    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_xxlarge"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/welcome_subtitle"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvAppTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Main Menu Container -->
    <LinearLayout
        android:id="@+id/menuContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Start Jamming Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartJamming"
            style="@style/Widget.MusicPadStudio.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/btn_start_jamming"
            android:textSize="@dimen/text_size_large"
            app:icon="@android:drawable/ic_media_play"
            app:iconGravity="textStart" />

        <!-- My Recordings Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMyRecordings"
            style="@style/Widget.MusicPadStudio.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/btn_my_recordings"
            android:textSize="@dimen/text_size_large"
            app:icon="@android:drawable/ic_menu_save"
            app:iconGravity="textStart" />

        <!-- Sound Packs Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSoundPacks"
            style="@style/Widget.MusicPadStudio.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/btn_sound_packs"
            android:textSize="@dimen/text_size_large"
            app:icon="@android:drawable/ic_menu_gallery"
            app:iconGravity="textStart" />

        <!-- Settings Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSettings"
            style="@style/Widget.MusicPadStudio.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/btn_settings"
            android:textSize="@dimen/text_size_large"
            app:icon="@android:drawable/ic_menu_preferences"
            app:iconGravity="textStart" />

    </LinearLayout>

    <!-- Version Info -->
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="v1.0.0"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/text_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
